Bug 747770 - Always show attachments that can't be displayed inline in the attachment pane (fixes some unit tests); r=bienvenu